[FIX] - Fixed wrap on price bar

--- a/assets/css/personnalization.css
+++ b/assets/css/personnalization.css
@@ -253,6 +253,7 @@ form {
 
     .price-bar {
         flex-direction: row;
+        flex-wrap: nowrap;
     }
 }
 
